Revert in order to not mess up coverage